archive/backup/cluster-a/istio-mtls-a.yaml
# mTLS Configuration for Cluster A
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-mtls
  namespace: nf-a-namespace
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: veramo-nf-a-mtls
  namespace: nf-a-namespace
spec:
  host: veramo-nf-a.nf-a-namespace.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
