archive/backup/cluster-a/istio-serviceentry-didcomm.yaml
# ServiceEntry - Cluster A kann Cluster B über HTTPS erreichen
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: nf-b-didcomm-external
  namespace: nf-a-namespace
spec:
  hosts:
  - didcomm.nf-b.cluster-b.global
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 172.23.0.3  # Cluster B IP
    ports:
      https: 31598  # ← Cluster B HTTPS NodePort
